<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">BatChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="Sign_In">Sign In</string>
    <string name="enterEmailAddress">user@example.com</string>
    <string name="enterPassword">Password</string>
    <string name="userImage">User Image</string>
    <string name="UITestUsername">Username</string>
    <string name="UITestConv">Conversation</string>
    <string name="UITestDate">Date</string>
    <string name="createAccount">Create Account</string>
    <string name="actionBarNewConversation">New Conversation</string>
    <string name="sendMessageHint">Send Message</string>
    <string name="sendButton">Send</string>
    <string name="actionBarNewContact">New Contact</string>
    <string name="enterNewContactEmailAddress">Add New Contact</string>
    <string name="BatChat">BatChat</string>

</resources>
