<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/conversationLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginBottom="1dp"
    android:background="#444444"
    android:orientation="horizontal"
    android:clickable="true" >

    <ImageView
        android:id="@+id/chatImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/userImage"
        android:src="@drawable/ic_launcher" />

    <GridLayout
        android:id="@+id/chatFragGridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chatUsername"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="0"
            android:gravity="top|start"
            android:singleLine="true"
            android:text="@string/UITestUsername"
            android:textColor="#EEEEEE"
            android:textSize="@dimen/homeUsernameTextSize" />

        <TextView
            android:id="@+id/conversationMessage"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_gravity="start|bottom"
            android:layout_row="0"
            android:singleLine="true"
            android:text="@string/UITestConv"
            android:textColor="#EEEEEE"
            android:textSize="@dimen/homeChatTextSize" />

        <TextView
            android:id="@+id/chatRecentDate"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="0"
            android:gravity="top|end"
            android:singleLine="true"
            android:text="@string/UITestDate"
            android:textColor="#EEEEEE" />

    </GridLayout>
</LinearLayout>
