<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#777777"
    android:columnCount="3"
    android:layout_gravity="end"
    android:orientation="horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp" >

    <TextView
        android:id="@+id/otherChatMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_marginTop="2dp"
        android:layout_row="0"
        android:singleLine="false"
        android:text="@string/UITestConv"
        android:textColor="#EEEEEE"
        android:textSize="@dimen/homeChatTextSize" />

    <TextView
        android:id="@+id/otherMessageDate"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="3"
        android:gravity="top|end"
        android:singleLine="true"
        android:text="@string/UITestDate"
        android:textColor="#EEEEEE" />

    <ImageView
        android:id="@+id/otherUserImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_column="1"
        android:layout_gravity="start|top"
        android:layout_row="0"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:contentDescription="@string/userImage"
        android:src="@drawable/ic_launcher" />
</GridLayout>