<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:baselineAligned="false" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#cbe7fb"
        android:layout_weight=".2"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/userImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:contentDescription="@string/userImage"
            android:src="@drawable/batchat_logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#cbe7fb"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_weight=".8" >
        <TextView
            android:id="@+id/chatMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/UITestConv"
            android:textColor="#000000"
            android:textSize="@dimen/homeChatTextSize" />

        <TextView
            android:id="@+id/messageDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:gravity="top|start"
            android:singleLine="true"
            android:text="@string/UITestDate"
            android:textColor="#000000"
            android:textSize="@dimen/dateTextSize" />
    </LinearLayout>
</LinearLayout>